# Fit4Cybersecurity

./: .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  SECURITY.md  VERSION.json  app.json  db.sqlite3  docker-compose.yml  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-doc.txt  requirements.txt  useful-resources.md  wait-for-postgres.sh
.github/workflows/: codeql-analysis.yml  dockerimage.yml  pre-commit.yaml  pythonapp.yml
INSTALL/: INSTALL.sh  INSTALL.sh.sha1  INSTALL.sh.sha256  INSTALL.sh.sha512
admin/: apps.py  forms.py  urls.py  views.py
audit/: admin.py  apps.py  forms.py  globals.py  models.py  urls.py  views.py
audit/api/: permissions.py  serializers.py  urls.py  views.py
audit/migrations/: 0001_initial.py
audit/templates/: audit.html  companies_list.html  editProduct.html  edit_audit.html  edit_company.html  edit_product.html  index.html  signup.html
contrib/: create_labels.py  fit4cybersecurity_users_data.json  fit4privacy_users_data.json  importq.py  nginx.conf  out.json  update.sh
csskp/: Pipfile  __init__.py  config_dev.py  db.sqlite3  heroku.py  package-lock.json  package.json  settings.py  urls.py  wsgi.py
csskp/csskp/: settings.py
csskp/cyber_workforce_survey_lux/: __init__.py
csskp/fit4africa/: __init__.py
csskp/fit4contract/: __init__.py
csskp/fit4csa/: __init__.py
csskp/fit4cybersecurity/: __init__.py  config.py
csskp/fit4ehealth/: __init__.py  site_config.py
csskp/fit4ldih/: __init__.py
csskp/fit4operatorsurvey/: __init__.py  config.py  site_config.py
csskp/fit4otsecurity/: __init__.py
csskp/fit4privacy/: __init__.py
csskp/fstp_registration/: __init__.py
csskp/otsecuritycheck/: __init__.py
csskp/survey/: admin.py  forms.py  globals.py  models.py  reporthelper.py  urls.py  viewLogic.py  views.py
csskp/surveyAlto/: __init__.py
csskp/surveyMarketCyberLux/: __init__.py
csskp/surveyPQCReadiness/: __init__.py
csskp/surveySMEDemand/: __init__.py
csskp/surveySummary/: apps.py  models.py
csskp/surveyliege/: __init__.py
csskp/surveylouvain/: __init__.py
csskp/utils/: radarFactory.py
csskp/wtemps/: fr.docx  fr1.docx  fr_description.txt  fr_intro.txt
csstarterkit/: composer.json
csstarterkit/config/: modules.config.php
csstarterkit/public/: index.php
data/: questions-fit4ilr.json
data/cyber_workforce_survey_lux/: context-questions.json  questions.json
data/fit4CSA/: questions.json
data/fit4Cybersecurity/: context-questions.json  questions.json  translations.json
data/fit4africa/: context-questions.json  questions.json
data/fit4contract/: questions.json
data/fit4csa/: questions.json
data/fit4cybersecurity/: context-questions.json  questions.json
data/fit4ehealth/: context-questions.json  questions.json
data/fit4ilr/: questions-fit4ilr.json  questions.json  translations-fit4ilr.json  translations.json
data/fit4ldih/: questions.json
data/fit4operatorsurvey/: context-questions.json  questions.json
data/fit4otsecurity/: questions.json
data/fit4privacy/: context-questions.json  questions.json  translations.json
data/fstp_registration/: context-questions.json  questions.json
data/nThContextQuestions/: questions.json
data/otsecuritycheck/: context-questions.json  questions(3).json  questions.json
data/survey4operators/: context-questions.json
data/surveyAlto/: context-questions.json  questions.json
data/surveyPQCReadiness/: context-questions.json  questions.json
data/surveySMEDemand/: context-questions.json  questions.json
data/surveyliege/: questions.json
data/surveylouvain/: questions.json
data/surveymarketcyberlux/: context-questions.json  questions.json
docker/python/: Dockerfile
docs/: api-v1.rst  conf.py  customizations.rst  docker.rst  index.rst  installation.rst  modules.rst  update.rst
docs/static/: openapi-schema.yml
locale/: django.pot  translations_v0.2.xlsx
packer/: README.md  build_vbox.sh  ubuntu-20.04.json
packer/http/: preseed.cfg
packer/scripts/: postinstall.sh
static/: package.json
static/css/: survey.css
stats/: apps.py  forms.py  stats_logic.py  urls.py  views.py
survey/: admin.py  apps.py  context_processors.py  forms.py  globals.py  models.py  report.py  reporthelper.py  urls.py  viewLogic.py  views.py
templates/: robots.txt
templates_parts/: footer_part.html  logo_part.html  terms_part.html
utils/: decorators.py  emails.py  notifications.py  radarFactory.py  utils.py
wtemps/: custom.css  de_description.txt  de_intro.txt  de_recs.txt  de_resultdisclaimer.txt  en_description.txt  en_intro.txt  en_recs.txt  en_resultdisclaimer.txt  fr.docx  fr_description.txt  fr_intro.txt  fr_recs.txt  fr_resultdisclaimer.txt  template-de.docx  template-de_bkp.docx  template-en.docx  template-fr.docx  template.docx  template.html
(+244 files in other folders)
