[tool.poetry]
name = "csskp"
version = "1.0.1"
description = "Fit4Cybersecurity is a self-assessment tool by CASES.LU."
authors = [
    "Fabien Mathey <fabien.mathey@cases.lu>",
    "Ruslan Baidan <ruslan.baidan@securitymadein.lu>",
    "Cédric Bonhomme <cedric@cedricbonhomme.org>",
    "Juan Rocha <juan.rocha@cases.lu>"
]
license = "AGPL-3.0-or-later"

readme = "README.md"

homepage = "https://github.com/CASES-LU/Fit4Cybersecurity"
repository = "https://github.com/CASES-LU/Fit4Cybersecurity"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.0"
python-docx = "^0.8.10"
matplotlib = "^3.1.3"
psycopg2-binary = "^2.8.4"
cryptography = "^3.4.7"
django-countries = "^7.1"
django-bootstrap-datepicker-plus = "^3.0.5"
django-bootstrap4 = "^1.1.1"
django-bootstrap-modal-forms = "^1.5.0"
weasyprint = "^53.3"
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]
gitchangelog = "^3.0.4"
mypy = "^0.910"
flake8 = "^4.0.1"

[tool.flake8]
max-line-length = 127
extend-ignore = "E203,"
max-complexity = 15

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
