[tool.poetry]
name = "csskp"
version = "1.0.1"
description = "Fit4Cybersecurity is a self-assessment tool by CASES.LU."
authors = [
    "Fabien Mathey <fabien.mathey@cases.lu>",
    "Ruslan Baidan <ruslan.baidan@securitymadein.lu>",
    "Cédric Bonhomme <cedric@cedricbonhomme.org>",
    "Juan Rocha <juan.rocha@cases.lu>"
]
license = "AGPL-3.0-or-later"

readme = "README.md"

homepage = "https://github.com/CASES-LU/Fit4Cybersecurity"
repository = "https://github.com/CASES-LU/Fit4Cybersecurity"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
mypy = "^0.931"
django = "^4.0.0"
psycopg2-binary = "^2.8.4"
cryptography = "^3.4.7"
djangorestframework = "^3.12.4"
django-countries = "^7.1"
django-bootstrap-datepicker-plus = "4.0.0"
django-bootstrap4 = "^1.1.1"
django-bootstrap-modal-forms = "^1.5.0"
bootstrap4 = "^0.1.0"
weasyprint = "^53.3"
PyYAML = "^6.0"
uritemplate = "^4.1.1"
matplotlib = "^3.5.0"
numpy = "^1.22.0rc1"
types-python-dateutil = "^2.8.8"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]
gitchangelog = "^3.0.4"
flake8 = "^4.0.1"
django-debug-toolbar = "^3.2.4"
pre-commit = "^2.17.0"
black = "^22.3.0"
pyupgrade = "^2.31.1"
reorder-python-imports = "^3.0.1"

[tool.flake8]
max-line-length = 100
extend-ignore = "E203,"
max-complexity = 15

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "csskp/config_*|survey/migrations|static|survey/*"
